# shadownet

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  agent-config.example.yaml  deploy.sh.example  docker-compose.test.yml  docker-compose.traefik.yml  docker-compose.yml  setup.sh
.github/workflows/: ci.yml
backend/: .env.example  .env.test  pyproject.toml
backend/app/: __init__.py  config.py  connect.py  database.py  executor.py  grants.py  identity.py  inbox_stream.py  main.py  mcp_auth.py  mcp_run.py  mcp_server.py  models.py  notifications.py  onboarding.py  protocol.py  signing.py
backend/app/routers/: a2a.py  auth.py  connect.py  contacts.py  messages.py
backend/tests/: conftest.py  test_domain.py  test_mcp.py  test_onboarding.py  test_v01_features.py  test_wire.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Shell.tsx
frontend/src/lib/: api.ts  auth.tsx  types.ts
frontend/src/pages/: Connect.tsx  ContactDetail.tsx  Contacts.tsx  Dashboard.tsx  Messages.tsx  Setup.tsx
plugins/: README.md
plugins/claude-code/hermes-social/: .mcp.json
plugins/claude-code/hermes-social/.claude-plugin/: plugin.json
plugins/claude-code/hermes-social/monitors/: monitors.json
plugins/claude-code/hermes-social/skills/hermes-social/: SKILL.md
plugins/claude-code/hermes-social/skills/hermes-social-coordination/: SKILL.md
plugins/claude-code/shadownet-local/: .mcp.json
plugins/claude-code/shadownet-local/.claude-plugin/: plugin.json
plugins/claude-code/shadownet-local/monitors/: monitors.json
plugins/claude-code/shadownet-local/skills/shadownet-local/: SKILL.md
plugins/claude-code/shadownet-local/skills/shadownet-local-coordination/: SKILL.md
plugins/hermes-agent/hermes-social/: __init__.py  plugin.yaml
plugins/hermes-agent/shadownet-local/: __init__.py  plugin.yaml
plugins/hermes-agent/shadownet-local/skills/shadownet-local/: SKILL.md
plugins/hermes-agent/shadownet-local/skills/shadownet-local-coordination/: SKILL.md
skills/social/hermes-social-coordination/: SKILL.md
skills/social/shadownet/: SKILL.md
skills/social/shadownet-accept/: SKILL.md
skills/social/shadownet-confirm/: SKILL.md
skills/social/shadownet-coordination/: SKILL.md
