[project]
name = "shadownet"
version = "0.1.0"
description = "A2A communication layer for agent-to-agent messaging"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlmodel>=0.0.22,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.28,<1",
    "PyNaCl>=1.5,<2",
    "PyJWT[crypto]>=2.10,<3",
    "bcrypt>=4.2,<5",
    "email-validator>=2.1,<3",
    "mcp>=1.6,<2",
    "a2a-sdk>=1.0,<1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
per-file-ignores = { "tests/**" = ["E402"] }