[project]
name = "shadownet-local"
version = "0.2.0"
description = "Self-hosted Shadownet Sidecar — A2A communication for personal AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlmodel>=0.0.22,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.28,<1",
    "shadownet>=0.5.0",
    "PyJWT[crypto]>=2.10,<3",
    "bcrypt>=4.2,<5",
    "email-validator>=2.1,<3",
    "mcp>=1.6,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
]

# TODO: replace with a plain PyPI version pin (and drop this source) once
# shadownet 0.5.0 is published. Until then the SDK resolves straight from the
# public monorepo branch over git — works in CI, Docker, and for contributors
# without needing a sibling checkout.
[tool.uv.sources]
shadownet = { git = "https://github.com/shadownet-protocol/shadownet.git", subdirectory = "python-sdk", branch = "feat/shadownet-0.2-migration" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
per-file-ignores = { "tests/**" = ["E402"] }